use separate autocomp file per config

--- a/.plotrc
+++ b/.plotrc
@@ -17,7 +17,6 @@ then
   
     function plot-config() {
       "${__PLOTTING_BUILD_DIR}/plot-config" ${1} ${2} ${3} ${4};
-      touch $(${__PLOTTING_BUILD_DIR}/plot-config get plotDefinitions) &> /dev/null
     }
 fi
 
@@ -28,7 +27,7 @@ _plot_completions_zsh() {
   local groupsAndCategories
   local names
 
-  local AUTOCOMPFILE="${__PLOTTING_BUILD_DIR}/plots.csv"
+  local AUTOCOMPFILE="${__PLOTTING_BUILD_DIR}/plots_$(${__PLOTTING_BUILD_DIR}/plot-config get active).csv"
   ${__PLOTTING_FRAMEWORK_DIR}/prepare_autocomplete.sh $AUTOCOMPFILE
   if [[ ! -f "$AUTOCOMPFILE" ]]; then
     return
