--- a/.plotrc
+++ b/.plotrc
@@ -45,7 +45,18 @@ if [[ -d "${__PLOTTING_BUILD_DIR}" ]]; then
     mkdir ${PROJECT_NAME}
     mkdir ${PROJECT_NAME}/build
     cp ${__PLOTTING_FRAMEWORK_DIR}/example/* ${PROJECT_NAME}/
+    sed -i.bak "s/MyPlots/${PROJECT_NAME}/" ${PROJECT_NAME}/CMakeLists.txt && rm ${PROJECT_NAME}/CMakeLists.txt.bak
     echo "Created plotting project ${PROJECT_NAME}."
+    if [[ "${2}" == "register" ]]; then
+      # FIXME: requires that user adjusts the file paths in example...
+      echo "Registered this project in plotting app. Use 'plot-config add ${PROJECT_NAME} ...' to change the settings manually."
+      ${__PLOTTING_BUILD_DIR}/plot-config add ${PROJECT_NAME} inputFiles ${PROJECT_NAME}/build/inputFiles.XML
+      ${__PLOTTING_BUILD_DIR}/plot-config add ${PROJECT_NAME} plotDefinitions ${PROJECT_NAME}/build/plotDefFile.XML
+      ${__PLOTTING_BUILD_DIR}/plot-config add ${PROJECT_NAME} executable ${PROJECT_NAME}/build/create
+      mkdir ${PROJECT_NAME}/build/plots
+      ${__PLOTTING_BUILD_DIR}/plot-config add ${PROJECT_NAME} outputDir ${PROJECT_NAME}/build/plots
+      echo "Use 'plot-config switch ${PROJECT_NAME}' to activate this project in the app."
+    fi
     return 0
 }
 
