steer debug levels via cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ string(REPLACE "src" "inc" HDRS "${HDRS}")
 set(MODULE_HDR inc/${MODULE}.h)
 set(ADDITIONAL_FILES
   ${CMAKE_CURRENT_SOURCE_DIR}/inc/Logging.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/PlottingFrameworkConfig.cmake
   README.md
   TODO.md
 )
