--- a/doc/doxygen.conf
+++ b/doc/doxygen.conf
@@ -862,7 +862,7 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 # The INPUT tag is defined in the file Doxyfile_INPUT created by the script makeinput.sh
 
-INPUT                  = ../src/ ../inc/
+INPUT                  = ../src/ ../include/
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
