--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -2,7 +2,7 @@ name: clang-format
 on:
   pull_request:
     branches:
-    - main
+    - master
 jobs:
   formatting-check:
     name: Formatting Check
