--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -7,13 +7,21 @@ jobs:
   formatting-check:
     name: Formatting Check
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path:
+          - 'include'
+          - 'src'
+          - 'app'
+          - 'example'
+          - 'skeleton'
     steps:
     - uses: actions/checkout@v3
     - name: Run clang-format style check for C/C++/Protobuf programs.
       uses: jidicula/clang-format-action@v4.9.0
       with:
         clang-format-version: '13'
-        check-path: 'src'
+        check-path: ${{ matrix.path }}
         fallback-style: 'Mozilla' # optional
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
